Fri Jul 22 11:13:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/ciao_server_dnc.mpb:
          Add naming as base project, CIAO_DnC_Server has this
          also

Fri Jul 22 09:30:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * tests/run_test.lst:
          Don't run Process_Manual_Event_Test on HPUX

Thu Jul 21 10:41:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Don't run Bug_2174_Regression in a minimum corba build

Thu Jul 21 09:15:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op_T.h:
          Use deprecate tag for deprecated methods

Thu Jul 21 09:24:58 2005  Simon McQueen  <sm@prismtech.com>

        * bin/ciao_tests.lst:

          Descheduled the 3 TAO/CIAO/DAnCE/tests/NodeApplicationTest
          tests. They fail and there have been no responses to
          requests that they be fixed.

Wed Jul 20 06:45:00 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* bin/msvc_static_order.lst:

	  Added Ds{Event,Notify}LogAdmin_{IDL,Skel,Serv} --- just to
	  be safe.

Wed Jul 20 09:31:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/ace/RMCast/Makefile.am:
          Added new files

Wed Jul 20 08:38:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
          Check for result != 0 instead of result > 0. It seems that when
          a run_test.pl has been added from a windows box that it sometimes
          doesn't get execute permission and then the script can't be
          executed on Unix systems. The return value is then -1 and this
          wasn't detected by the scripts

Wed Jul 20 07:55:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_static_order.lst:
          Added DsLogAdmin_IDL

Tue Jul 19 14:24:47 2005  Gary Maxey <gary.maxey@hp.com>

        * bin/PerlACE/Process_Unix.pm:
